--- a/CodeGenerator.html
+++ b/CodeGenerator.html
@@ -5,7 +5,12 @@
   <meta charset="UTF-8">
   <title>实体类管理</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
+  <!-- 代码高亮 -->
+  <link rel="stylesheet" href="assets/highlight/github.min.css">
+  <script src="assets/highlight/highlight.min.js"></script>
+  <script src="assets/highlight/languages/java.min.js"></script>
+  <script src="assets/highlight/languages/sql.min.js"></script>
+  <script src="assets/highlight/languages/json.min.js"></script>
   <style>
     textarea#jsonInput:focus {
       border-color: var(--primary-color);
@@ -1459,6 +1464,10 @@
       box-shadow: 0 1px 2px rgba(0, 0, 0, .05) !important;
     }
 
+    .generate-num-input {
+      width: 200px !important;
+    }
+
     .field-actions button:hover {
       border-color: var(--primary-color);
       background: #f0f9ff;
@@ -1511,6 +1520,17 @@
 
     .field-actions .delete-btn {
       color: var(--error-color);
+      box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
+    }
+
+    .field-actions .mock-btn:hover {
+      border-color: var(--new-hover);
+      background: #fef2f2;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
+    }
+
+    .field-actions .mock-btn {
+      color: var(--new-color);
       box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
     }
 
@@ -1799,6 +1819,16 @@
 
     .entity-actions .btn-common.icon-only.delete-btn {
       border: 1.5px solid var(--error-color) !important;
+      background: #fff !important;
+    }
+
+    .entity-actions .btn-common.icon-only.mock-btn:hover {
+      border-color: #e0e0e0 !important;
+      background: #e0e0e0 !important;
+    }
+
+    .entity-actions .btn-common.icon-only.mock-btn {
+      border: 1.5px solid var(--new-color) !important;
       background: #fff !important;
     }
 
@@ -2391,6 +2421,10 @@
       background: #fff !important;
     }
 
+    .btn-common.icon-only.mock-btn svg:only-child {
+      stroke: var(--new-color) !important;
+    }
+
     .btn-common.icon-only.copy-btn:hover {
       border-color: var(--primary-color) !important;
       background: #f0f9ff !important;
@@ -2670,9 +2704,6 @@
       --info-color: #3b82f6;
       /* 说明按钮 - 蓝色 */
       --info-hover: #2563eb;
-      --template-color: #7c3aed;
-      /* 模板按钮 - 紫色 */
-      --template-hover: #5b21b6;
       --warning-color: #f59e0b;
       --warning-hover: #d97706;
       --new-color: #64748b;
@@ -3088,21 +3119,6 @@
     </div>
   </div>
 
-  <!-- 导入JSON配置弹窗（静态HTML实现） -->
-  <div id="importJsonModal" class="modal" style="display:none;">
-    <div class="modal-content">
-      <div class="modal-header">导入JSON配置</div>
-      <div class="modal-body">
-        <textarea id="importJsonInput" placeholder="请输入JSON配置"
-          style="width:100%;height:200px;resize:vertical;"></textarea>
-      </div>
-      <div class="modal-footer">
-        <button class="btn-secondary" onclick="closeModal('importJsonModal')">取消</button>
-        <button class="btn-save" onclick="importJsonFromText()">导入</button>
-      </div>
-    </div>
-  </div>
-
   <!-- 删除配置确认弹窗 -->
   <div id="deleteConfigModal" class="modal">
     <div class="modal-content">
@@ -3117,12 +3133,14 @@
 
   <script>
     // 确保highlight.js在页面加载完成后初始化
-    window.onload = function () {
-      hljs.configure({
-        languages: ['java', 'sql', 'json']
-      });
-      // document.getElementById('floatingNav').style.display = 'none'; // 已无此元素，彻底移除
-    };
+    window.addEventListener('DOMContentLoaded', function () {
+      if (window.hljs) {
+        hljs.configure({
+          languages: ['java', 'sql', 'json']
+        });
+      }
+      renderConfigTable(); // 页面加载时自动渲染表格，显示新建按钮
+    });
 
     function camelToUnderline(str) {
       return str.replace(/([A-Z])/g, '_$1').replace(/^_/, '').toLowerCase();
@@ -3732,10 +3750,12 @@ public AjaxResult page(
 
         document.getElementById('result').innerHTML = html;
 
-        // 应用代码高亮
-        document.querySelectorAll('pre code').forEach((block) => {
-          hljs.highlightElement(block);
-        });
+        // 生成代码后高亮所有代码块
+        if (window.hljs) {
+          document.querySelectorAll('pre code').forEach((block) => {
+            hljs.highlightElement(block);
+          });
+        }
 
         renderNavLeft();
 
@@ -3795,8 +3815,10 @@ public AjaxResult page(
       }
       const config = document.getElementById('jsonInput').value.trim();
       const projects = JSON.parse(localStorage.getItem('codeGeneratorProjects') || '{}');
-      // 校验配置名是否已存在
-      if (projects[projectName]) {
+      // 只在新建时校验配置名是否已存在，编辑/覆盖时允许同名保存
+      const header = document.querySelector('#mainConfigSelector .config-select-header');
+      const currentName = header ? header.textContent : '';
+      if (projects[projectName] && currentName !== projectName) {
         showToast('配置名已存在，请更换名称。', 'error');
         return;
       }
@@ -3812,8 +3834,8 @@ public AjaxResult page(
       document.getElementById('projectName').value = '';
       // 更新主页面下拉框选中项
       renderMainConfigSelector();
-      const header = document.querySelector('#mainConfigSelector .config-select-header');
-      if (header) header.textContent = projectName;
+      const header2 = document.querySelector('#mainConfigSelector .config-select-header');
+      if (header2) header2.textContent = projectName;
       showToast('配置已保存');
     }
 
@@ -4101,12 +4123,12 @@ private final I\${entityName}Service \${varName}Service;
       // 检查是否按下了 Ctrl + I
       if (e.ctrlKey && e.key.toLowerCase() === 'i') {
         e.preventDefault();
-        showImportJsonModal();
+        importConfigFromJson();
       }
       // 检查是否按下了 Ctrl + E
       if (e.ctrlKey && e.key.toLowerCase() === 'e') {
         e.preventDefault();
-        copyJsonToClipboard();
+        exportConfigToJson();
       }
       // 检查是否按下了 Ctrl + T
       if (e.ctrlKey && e.key.toLowerCase() === 't') {
@@ -4824,6 +4846,14 @@ private final I\${entityName}Service \${varName}Service;
           icon: `<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 6h18M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2M10 11v6M14 11v6"></path></svg>`,
           tooltip: '删除实体',
           onClick: () => removeEntity(entityIdx)
+        }));
+        // 生成模拟数据按钮（灰色）
+        actionsDiv.appendChild(createButton({
+          color: 'gray',
+          className: 'action-btn mock-btn',
+          icon: `<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="18" height="18" rx="2"/><path d="M3 9h18M3 15h18M9 3v18M15 3v18"/></svg>`,
+          tooltip: '生成模拟数据',
+          onClick: () => openMockDataModal(entityIdx)
         }));
         headerDiv.appendChild(actionsDiv);
         entityDiv.appendChild(headerDiv);
@@ -5660,24 +5690,25 @@ private final I\${entityName}Service \${varName}Service;
     // 渲染右下角悬浮操作按钮组
     function renderFloatingActionGroup() {
       const group = document.getElementById('floatingActionGroup');
+      if (!group) return;
       group.innerHTML = '';
       const btns = [
         {
           icon: `<svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><rect x="2" y="19" width="20" height="2" rx="1" stroke-width="0" fill="currentColor"/><path d="M12 4v10" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.8"/><path d="M7 11l5 5 5-5" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.8"/></svg>`,
-          onClick: showImportJsonModal,
-          tooltip: '导入',
+          onClick: importConfigFromJson,
+          tooltip: '导入（Ctrl + I）',
           key: 'import'
         },
         {
           icon: `<svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><rect x="2" y="3" width="20" height="2" rx="1" stroke-width="0" fill="currentColor"/><path d="M12 20V10" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.8"/><path d="M7 13l5-5 5 5" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.8"/></svg>`,
-          onClick: copyJsonToClipboard,
-          tooltip: '导出',
+          onClick: exportConfigToJson,
+          tooltip: '导出（Ctrl + E）',
           key: 'export'
         },
         {
           icon: `<svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><circle cx="12" cy="12" r="10" stroke-width="2.8"/><path d="M12 17h.01" stroke-linecap="round" stroke-width="2.8"/><path d="M12 13a2 2 0 1 0-2-2" stroke-linecap="round" stroke-width="2.8"/></svg>`,
           onClick: showInstructionModal,
-          tooltip: '说明',
+          tooltip: '说明（Ctrl + H）',
           key: 'help'
         },
         {
@@ -5866,9 +5897,155 @@ private final I\${entityName}Service \${varName}Service;
         }
       });
     }
+
+    // 保证右下角按钮可用，补充全局定义
+    function exportConfigToJson() {
+      const json = document.getElementById('jsonInput').value.trim();
+      if (!json) {
+        showToast('没有可导出的配置', 'error');
+        return;
+      }
+      let filename = 'config-' + new Date().toISOString().replace(/[:.]/g, '-') + '.json';
+      const blob = new Blob([json], { type: 'application/json' });
+      const link = document.createElement('a');
+      link.href = URL.createObjectURL(blob);
+      link.download = filename;
+      document.body.appendChild(link);
+      link.click();
+      document.body.removeChild(link);
+      showToast('配置已导出为JSON文件', 'success');
+    }
+
+    function importConfigFromJson() {
+      const input = document.createElement('input');
+      input.type = 'file';
+      input.accept = '.json,application/json';
+      input.onchange = function (e) {
+        const file = e.target.files[0];
+        if (!file) return;
+        const reader = new FileReader();
+        reader.onload = function (evt) {
+          try {
+            const content = evt.target.result;
+            // 校验是否为合法JSON
+            JSON.parse(content);
+            document.getElementById('jsonInput').value = content;
+            jsonToConfigTable(content);
+            showToast('配置导入成功', 'success');
+          } catch (err) {
+            showToast('导入的文件不是有效的JSON配置', 'error');
+          }
+        };
+        reader.readAsText(file, 'utf-8');
+      };
+      input.click();
+    }
+
+    function openMockDataModal(entityIdx) {
+      let modal = document.getElementById('mockDataModal');
+      if (!modal) {
+        modal = document.createElement('div');
+        modal.id = 'mockDataModal';
+        modal.className = 'modal';
+        modal.innerHTML = `
+          <div class="modal-content" style="min-width:400px;max-width:40vw;">
+            <div class="modal-header">生成模拟数据</div>
+            <div class="modal-body">
+              <label>生成条数：<input id="mockDataCount" class="field-comment-input generate-num-input" placeholder="包名"></label>
+              <button class="btn-common btn-info" id="mockDataGenBtn" style="margin-left:1rem;">生成</button>
+              <button class="btn-common btn-save" id="mockDataCopyBtn">复制</button>
+              <pre id="mockDataResult" style="margin-top:1rem;max-height:300px;overflow:auto;background:#f6f8fa;padding:1em;border-radius:6px;display:none;"><code class='language-json'></code></pre>
+            </div>
+            <div class="modal-footer">
+              <button class="btn-secondary" onclick="document.getElementById('mockDataModal').style.display='none'">关闭</button>
+            </div>
+          </div>`;
+        document.body.appendChild(modal);
+      }
+      modal.style.display = 'flex';
+      document.getElementById('mockDataResult').style.display = 'none';
+      document.getElementById('mockDataCopyBtn').style.display = 'none';
+      document.getElementById('mockDataCount').value = 10;
+      document.getElementById('mockDataGenBtn').onclick = function () {
+        const count = parseInt(document.getElementById('mockDataCount').value) || 10;
+        const data = generateMockData(entityIdx, count);
+        const json = JSON.stringify(data, null, 2);
+        const pre = document.getElementById('mockDataResult');
+        const code = pre.querySelector('code');
+        code.textContent = json;
+        pre.style.display = 'block';
+        document.getElementById('mockDataCopyBtn').style.display = 'inline-block';
+        if (window.hljs) hljs.highlightElement(code);
+      };
+      document.getElementById('mockDataCopyBtn').onclick = function () {
+        const code = document.getElementById('mockDataResult').querySelector('code');
+        navigator.clipboard.writeText(code.textContent).then(() => {
+          showToast('已复制到剪贴板');
+        });
+      };
+    }
+
+    function generateMockData(entityIdx, count) {
+      const entity = configTableData[entityIdx];
+      if (!entity) return [];
+      const fields = entity.fields;
+      const now = Date.now();
+      const result = [];
+      for (let i = 0; i < count; i++) {
+        const row = {};
+        fields.forEach(f => {
+          // id字段：从1开始递增
+          if (f.name.toLowerCase() === 'id') {
+            row[f.name] = i + 1;
+          }
+          // 字符串
+          else if (/string|char|varchar|text/i.test(f.type)) {
+            row[f.name] = (f.comment ? f.comment : '内容') + (i + 1);
+          }
+          // 时间
+          else if (/date|time/i.test(f.type) || /date|time/i.test(f.name)) {
+            // 每条减一天
+            let date = new Date(now - i * 86400000);
+            // 根据类型中的格式格式化
+            let fmt = 'yyyy-MM-dd HH:mm:ss';
+            const match = f.type.match(/\(([^)]+)\)/);
+            if (match && match[1]) fmt = match[1];
+            row[f.name] = formatDate(date, fmt);
+          }
+          // 数字
+          else if (/int|float|double|decimal|number/i.test(f.type)) {
+            // 精度处理
+            let precision = 0;
+            if (/decimal|float|double/i.test(f.type)) {
+              const match = f.type.match(/\((\d+),(\d+)\)/);
+              if (match) precision = parseInt(match[2]);
+              row[f.name] = Number((Math.random() * 100).toFixed(precision));
+            } else {
+              row[f.name] = Math.floor(Math.random() * 10000);
+            }
+          }
+          // 其它类型
+          else {
+            row[f.name] = (f.comment ? f.comment : '内容') + (i + 1);
+          }
+        });
+        result.push(row);
+      }
+      return result;
+    }
+
+    // 时间格式化函数，支持常见格式
+    function formatDate(date, fmt) {
+      const pad = (n, l = 2) => n.toString().padStart(l, '0');
+      return fmt
+        .replace(/yyyy/g, date.getFullYear())
+        .replace(/MM/g, pad(date.getMonth() + 1))
+        .replace(/dd/g, pad(date.getDate()))
+        .replace(/HH/g, pad(date.getHours()))
+        .replace(/mm/g, pad(date.getMinutes()))
+        .replace(/ss/g, pad(date.getSeconds()));
+    }
   </script>
 </body>
-
-</html>
 
 </html>
